[package]
name = "url_parser_on_rust"
version = "1.0.0"
edition = "2021"
description = "url parser on rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.5"
pest_derive = "2.7.5"  
clap = "2.33"
thiserror = "1.0.0"
